Assignment/assignment1/src/main/bkool/parser/.antlr/BKOOLParser.py
# Generated from /Users/duyanhle/Desktop/BKU/223/PPL/Assignment/assignment1/src/main/bkool/parser/BKOOL.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'boolean'", "'break'", "'class'", "'continue'", 
                     "'do'", "'else'", "'extends'", "'float'", "'if'", "'int'", 
                     "'new'", "'string'", "'then'", "'for'", "'return'", 
                     "'true'", "'false'", "'void'", "'nil'", "'this'", "'final'", 
                     "'static'", "'to'", "'downto'", "'+'", "'-'", "'*'", 
                     "'/'", "'\\'", "'%'", "'=='", "'!='", "'<'", "'>'", 
                     "'<='", "'>='", "'||'", "'&&'", "'!'", "'^'", "':='", 
                     "'='", "'['", "']'", "'{'", "'}'", "'('", "')'", "';'", 
                     "':'", "'.'", "','" ]

    symbolicNames = [ "<INVALID>", "BOOLEAN", "BREAK", "CLASS", "CONTINUE", 
                      "DO", "ELSE", "EXTENDS", "FLOAT", "IF", "INT", "NEW", 
                      "STRING", "THEN", "FOR", "RETURN", "TRUE", "FALSE", 
                      "VOID", "NIL", "THIS", "FINAL", "STATIC", "TO", "DOWNTO", 
                      "ADD_OP", "SUB_OP", "MUL_OP", "FLODIV_OP", "INTDIV_OP", 
                      "MOD_OP", "EQUAL_OP", "NEQUAL_OP", "LT_OP", "GT_OP", 
                      "LTE_OP", "GTE_OP", "OR_OP", "AND_OP", "NOT_OP", "CONCAT_OP", 
                      "ASSIGN_OP", "EQUAL_SIGN", "LSB", "RSB", "LP", "RP", 
                      "LB", "RB", "SEMI", "COLON", "DOT", "COMMA", "ID", 
                      "WS", "LINE_COMMENT", "BLOCK_COMMENT", "INTLIT", "FLOATLIT", 
                      "STRINGLIT", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_classDeclList = 1
    RULE_classDecl = 2
    RULE_classExtends = 3
    RULE_classBody = 4
    RULE_classMemberList = 5
    RULE_classMember = 6
    RULE_methodDecl = 7
    RULE_constructor = 8
    RULE_normalMethod = 9
    RULE_typ = 10
    RULE_paramDecl = 11
    RULE_paramList = 12
    RULE_paramPrime = 13
    RULE_param = 14
    RULE_idlist = 15
    RULE_attrDecl = 16
    RULE_immutDecl = 17
    RULE_mutDecl = 18
    RULE_mutKeyword = 19
    RULE_immutKeywords = 20
    RULE_attrList = 21
    RULE_attrMember = 22
    RULE_attrInit = 23
    RULE_arrayLit = 24
    RULE_arrMemberList = 25
    RULE_arrMember = 26
    RULE_booleanLit = 27
    RULE_expr = 28
    RULE_expr1 = 29
    RULE_expr2 = 30
    RULE_expr3 = 31
    RULE_expr4 = 32
    RULE_expr5 = 33
    RULE_expr6 = 34
    RULE_expr7 = 35
    RULE_expr8 = 36
    RULE_expr9 = 37
    RULE_expr10 = 38
    RULE_expr11 = 39
    RULE_arglist = 40
    RULE_argprime = 41
    RULE_primiLit = 42
    RULE_subexpr = 43
    RULE_stmtlist = 44
    RULE_stmt = 45
    RULE_blockstmt = 46
    RULE_vardecllist = 47
    RULE_vardecl = 48
    RULE_immutVardecl = 49
    RULE_mutVardecl = 50
    RULE_asmstmt = 51
    RULE_asmlhs = 52
    RULE_ifstmt = 53
    RULE_forstmt = 54
    RULE_breakstmt = 55
    RULE_contstmt = 56
    RULE_retstmt = 57
    RULE_methodivkstmt = 58
    RULE_primiTyp = 59
    RULE_classTyp = 60
    RULE_arrayTyp = 61

    ruleNames =  [ "program", "classDeclList", "classDecl", "classExtends", 
                   "classBody", "classMemberList", "classMember", "methodDecl", 
                   "constructor", "normalMethod", "typ", "paramDecl", "paramList", 
                   "paramPrime", "param", "idlist", "attrDecl", "immutDecl", 
                   "mutDecl", "mutKeyword", "immutKeywords", "attrList", 
                   "attrMember", "attrInit", "arrayLit", "arrMemberList", 
                   "arrMember", "booleanLit", "expr", "expr1", "expr2", 
                   "expr3", "expr4", "expr5", "expr6", "expr7", "expr8", 
                   "expr9", "expr10", "expr11", "arglist", "argprime", "primiLit", 
                   "subexpr", "stmtlist", "stmt", "blockstmt", "vardecllist", 
                   "vardecl", "immutVardecl", "mutVardecl", "asmstmt", "asmlhs", 
                   "ifstmt", "forstmt", "breakstmt", "contstmt", "retstmt", 
                   "methodivkstmt", "primiTyp", "classTyp", "arrayTyp" ]

    EOF = Token.EOF
    BOOLEAN=1
    BREAK=2
    CLASS=3
    CONTINUE=4
    DO=5
    ELSE=6
    EXTENDS=7
    FLOAT=8
    IF=9
    INT=10
    NEW=11
    STRING=12
    THEN=13
    FOR=14
    RETURN=15
    TRUE=16
    FALSE=17
    VOID=18
    NIL=19
    THIS=20
    FINAL=21
    STATIC=22
    TO=23
    DOWNTO=24
    ADD_OP=25
    SUB_OP=26
    MUL_OP=27
    FLODIV_OP=28
    INTDIV_OP=29
    MOD_OP=30
    EQUAL_OP=31
    NEQUAL_OP=32
    LT_OP=33
    GT_OP=34
    LTE_OP=35
    GTE_OP=36
    OR_OP=37
    AND_OP=38
    NOT_OP=39
    CONCAT_OP=40
    ASSIGN_OP=41
    EQUAL_SIGN=42
    LSB=43
    RSB=44
    LP=45
    RP=46
    LB=47
    RB=48
    SEMI=49
    COLON=50
    DOT=51
    COMMA=52
    ID=53
    WS=54
    LINE_COMMENT=55
    BLOCK_COMMENT=56
    INTLIT=57
    FLOATLIT=58
    STRINGLIT=59
    UNCLOSE_STRING=60
    ILLEGAL_ESCAPE=61
    ERROR_CHAR=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDeclList(self):
            return self.getTypedRuleContext(BKOOLParser.ClassDeclListContext,0)


        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_program




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.classDeclList()
            self.state = 125
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDecl(self):
            return self.getTypedRuleContext(BKOOLParser.ClassDeclContext,0)


        def classDeclList(self):
            return self.getTypedRuleContext(BKOOLParser.ClassDeclListContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_classDeclList




    def classDeclList(self):

        localctx = BKOOLParser.ClassDeclListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDeclList)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.classDecl()
                self.state = 128
                self.classDeclList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.classDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(BKOOLParser.CLASS, 0)

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def classExtends(self):
            return self.getTypedRuleContext(BKOOLParser.ClassExtendsContext,0)


        def classBody(self):
            return self.getTypedRuleContext(BKOOLParser.ClassBodyContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_classDecl




    def classDecl(self):

        localctx = BKOOLParser.ClassDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(BKOOLParser.CLASS)
            self.state = 134
            self.match(BKOOLParser.ID)
            self.state = 135
            self.classExtends()
            self.state = 136
            self.classBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassExtendsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXTENDS(self):
            return self.getToken(BKOOLParser.EXTENDS, 0)

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_classExtends




    def classExtends(self):

        localctx = BKOOLParser.ClassExtendsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_classExtends)
        try:
            self.state = 141
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.match(BKOOLParser.EXTENDS)
                self.state = 139
                self.match(BKOOLParser.ID)
                pass
            elif token in [45]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(BKOOLParser.LP, 0)

        def classMemberList(self):
            return self.getTypedRuleContext(BKOOLParser.ClassMemberListContext,0)


        def RP(self):
            return self.getToken(BKOOLParser.RP, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_classBody




    def classBody(self):

        localctx = BKOOLParser.ClassBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_classBody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(BKOOLParser.LP)
            self.state = 144
            self.classMemberList()
            self.state = 145
            self.match(BKOOLParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassMemberListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classMember(self):
            return self.getTypedRuleContext(BKOOLParser.ClassMemberContext,0)


        def classMemberList(self):
            return self.getTypedRuleContext(BKOOLParser.ClassMemberListContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_classMemberList




    def classMemberList(self):

        localctx = BKOOLParser.ClassMemberListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_classMemberList)
        try:
            self.state = 151
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 8, 10, 12, 18, 21, 22, 53]:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.classMember()
                self.state = 148
                self.classMemberList()
                pass
            elif token in [46]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassMemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attrDecl(self):
            return self.getTypedRuleContext(BKOOLParser.AttrDeclContext,0)


        def methodDecl(self):
            return self.getTypedRuleContext(BKOOLParser.MethodDeclContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_classMember




    def classMember(self):

        localctx = BKOOLParser.ClassMemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_classMember)
        try:
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.attrDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.methodDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constructor(self):
            return self.getTypedRuleContext(BKOOLParser.ConstructorContext,0)


        def normalMethod(self):
            return self.getTypedRuleContext(BKOOLParser.NormalMethodContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_methodDecl




    def methodDecl(self):

        localctx = BKOOLParser.MethodDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_methodDecl)
        try:
            self.state = 159
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.constructor()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 158
                self.normalMethod()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def paramDecl(self):
            return self.getTypedRuleContext(BKOOLParser.ParamDeclContext,0)


        def blockstmt(self):
            return self.getTypedRuleContext(BKOOLParser.BlockstmtContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_constructor




    def constructor(self):

        localctx = BKOOLParser.ConstructorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_constructor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(BKOOLParser.ID)
            self.state = 162
            self.paramDecl()
            self.state = 163
            self.blockstmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NormalMethodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self):
            return self.getTypedRuleContext(BKOOLParser.TypContext,0)


        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def paramDecl(self):
            return self.getTypedRuleContext(BKOOLParser.ParamDeclContext,0)


        def blockstmt(self):
            return self.getTypedRuleContext(BKOOLParser.BlockstmtContext,0)


        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_normalMethod




    def normalMethod(self):

        localctx = BKOOLParser.NormalMethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_normalMethod)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [22]:
                self.state = 165
                self.match(BKOOLParser.STATIC)
                pass
            elif token in [1, 8, 10, 12, 18, 53]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 169
            self.typ()
            self.state = 170
            self.match(BKOOLParser.ID)
            self.state = 171
            self.paramDecl()
            self.state = 172
            self.blockstmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primiTyp(self):
            return self.getTypedRuleContext(BKOOLParser.PrimiTypContext,0)


        def classTyp(self):
            return self.getTypedRuleContext(BKOOLParser.ClassTypContext,0)


        def arrayTyp(self):
            return self.getTypedRuleContext(BKOOLParser.ArrayTypContext,0)


        def VOID(self):
            return self.getToken(BKOOLParser.VOID, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_typ




    def typ(self):

        localctx = BKOOLParser.TypContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_typ)
        try:
            self.state = 178
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 174
                self.primiTyp()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 175
                self.classTyp()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 176
                self.arrayTyp()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 177
                self.match(BKOOLParser.VOID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(BKOOLParser.LB, 0)

        def paramList(self):
            return self.getTypedRuleContext(BKOOLParser.ParamListContext,0)


        def RB(self):
            return self.getToken(BKOOLParser.RB, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_paramDecl




    def paramDecl(self):

        localctx = BKOOLParser.ParamDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_paramDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.match(BKOOLParser.LB)
            self.state = 181
            self.paramList()
            self.state = 182
            self.match(BKOOLParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramPrime(self):
            return self.getTypedRuleContext(BKOOLParser.ParamPrimeContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_paramList




    def paramList(self):

        localctx = BKOOLParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_paramList)
        try:
            self.state = 186
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 8, 10, 12, 18, 53]:
                self.enterOuterAlt(localctx, 1)
                self.state = 184
                self.paramPrime()
                pass
            elif token in [48]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamPrimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(BKOOLParser.ParamContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def paramPrime(self):
            return self.getTypedRuleContext(BKOOLParser.ParamPrimeContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_paramPrime




    def paramPrime(self):

        localctx = BKOOLParser.ParamPrimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_paramPrime)
        try:
            self.state = 193
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 188
                self.param()
                self.state = 189
                self.match(BKOOLParser.SEMI)
                self.state = 190
                self.paramPrime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 192
                self.param()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self):
            return self.getTypedRuleContext(BKOOLParser.TypContext,0)


        def idlist(self):
            return self.getTypedRuleContext(BKOOLParser.IdlistContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_param




    def param(self):

        localctx = BKOOLParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 195
            self.typ()
            self.state = 196
            self.idlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def idlist(self):
            return self.getTypedRuleContext(BKOOLParser.IdlistContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_idlist




    def idlist(self):
